# cmake-experiments

./: CMakeLists.txt  README.asciidoc  cmake-clean.sh  tutorial.cxx
MathFunctions/: MathFunctions.h  mysqrt.cxx
cmake.org-cmake-tutorial/: cmake-clean.sh
cmake.org-cmake-tutorial/MathFunctions/: mysqrt.cxx
shared-library/: CMakeLists.txt  app.cpp  cmake-clean.sh
shared-library/palindrome/: CMakeLists.txt  cmake-clean.sh  palindrome.cpp  palindrome.hpp
