cmake_minimum_required(VERSION 3.10)

#IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
#        SET(CMAKE_INSTALL_PREFIX  ${CMAKE_BINARY_DIR}/../build CACHE PATH "Install to build directory" FORCE)
#ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)

#set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../lib)
#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../lib)
#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin)

add_library(palindrome SHARED palindrome.cpp)

install (TARGETS palindrome DESTINATION bin)
install (FILES palindrome.h DESTINATION include)
